CHANGES IN VERSION 1.9.1
-------------------------

    o update for DelayedArray (>= v0.27.2)


CHANGES IN VERSION 1.8.3
-------------------------

    o progress bar in `scHDF2GDS()`

    o update `%*%` with SC_GDSMatrix


CHANGES IN VERSION 1.8.0
-------------------------

    o new functions `scNumSplit()`, `scRowAutoGrid()`, `scColAutoGrid()`

    o update the vignettes

    o override S4 functions colsum, rowsum, scale, pmin2, pmax2 for
      SC_GDSMatrix

    o new S4 generic functions `row_nnzero()`, `col_nnzero()`, `scGetFiles()`,
      `scMemory()`, `scRowMeanVar()`, `scColMeanVar()`

    o new functions `scSetMax()`, `scSetMin()`, `scSetBounds()`,
      `scReplaceNA()`

    o update S4 functions `[`, `[[`, `names<-`, `dimnames<-`, aperm, Ops, Math,
      crossprod, tcrossprod for SC_GDSArray

    o override S4 functions rowSums, colSums, rowSums2, colSums2, rowProds,
      colProds, rowMeans, colMeans, rowMeans2, colMeans2, rowVars, colVars,
      rowSds, colSds, rowMins, colMins, rowMaxs, colMaxs, rowRanges, colRanges,
      rowAnyNAs, colAnyNAs, rowCollapse, colCollapse for SC_GDSMatrix


CHANGES IN VERSION 1.4.0
-------------------------

    o new functions `scMEX2GDS()` and `scHDF2GDS()`


CHANGES IN VERSION 1.2.1
-------------------------

    o new Overview.Rmd in the vignettes


CHANGES IN VERSION 1.0.0
-------------------------

    o initial version of SCArray